# onnxify

./: .gitignore  .gitmodules  LICENSE  README.md  install-onnxify-cli.ps1  install-onnxify-cli.sh  install-onnxify-skills.ps1  install-onnxify-skills.sh  update-agent-skills.ps1
.docs/nuget/: Onnxify.CLI.md  Onnxify.HuggingFace.md  Onnxify.ML.TorchSharp.md  Onnxify.ML.md  Onnxify.ModelGenerator.md  Onnxify.ProjectGenerator.md  Onnxify.Safetensors.md  Onnxify.TorchSharp.md  Onnxify.md
.github/workflows/: github-ci.yml
src/: CMakeLists.txt  Directory.Build.props  Onnxify.slnx
src/Onnxify.Abstractions/: Class1.cs
src/Onnxify.AgentSkillGenerator/: Onnxify.AgentSkillGenerator.csproj  OperatorSkillGenerator.cs  Program.cs  SchemaModels.cs  TorchSharpConverterSkillGenerator.cs
src/Onnxify.CLI/: App.cs  Onnxify.CLI.csproj  Program.cs
src/Onnxify.ConsoleTest/: AlexNet.cs  AlexNetExporter.cs  ConvTest.cs  Onnxify.ConsoleTest.csproj  OperatorSchema.cs  Program.cs
src/Onnxify.Examples/: AlexNet.cs  AlexNetTrainer.cs  DataReader.cs  ModelEvaluator.cs  Onnxify.Examples.csproj  Program.cs
src/Onnxify.Examples.Models/: MiniGpt2LikeModel.cs  Onnxify.Examples.Models.csproj  RealEsrganRrdbNet.cs  TinyYoloLikeDetector.cs
src/Onnxify.HuggingFace/: HuggingFaceClient.cs  HuggingFaceDownloadOptions.cs  HuggingFaceDownloadProgress.cs  HuggingFaceDownloadResult.cs  HuggingFaceDownloadedFile.cs  Onnxify.HuggingFace.csproj
src/Onnxify.Introspection/: Onnxify.Introspection.csproj  OnnxifyMode.cs  Program.cs  TorchSharpMode.cs
src/Onnxify.ML/: Class1.cs  CompositeStage.cs  ConcurrentEnumerator.cs  ConcurrentEnumeratorOptions.cs  EpochItem.cs  MiniBatch.cs  Onnxify.ML.csproj  Pipeline.cs  PipelineAsyncEnumerable.cs  PipelineContext.cs  PipelineExecutionExtensions.cs  PipelineProgress.cs  PipelineStage.cs  PipelineStageCategories.cs  PipelineStageExecutionExtensions.cs  PipelineStageOptions.cs
src/Onnxify.ML.TorchSharp/: Class1.cs  Onnxify.ML.TorchSharp.csproj  TorchBatchTensors.cs  TorchInferenceResult.cs  TorchMiniBatch.cs  TorchTrainingStepResult.cs
src/Onnxify.ModelGenerator/: OnnxModelGenerator.cs  OnnxModelMetadataReader.cs  Onnxify.ModelGenerator.csproj  Onnxify.ModelGenerator.props  Onnxify.ModelGenerator.targets  TorchOpAttribute.cs  TorchSharpOpAttribute.cs
src/Onnxify.OperatorSchemaGenerator/: CMakeLists.txt  Onnxify.OperatorSchemaGenerator.cpp  Onnxify.OperatorSchemaGenerator.h  StringBuilder.cpp  StringBuilder.h  main.cpp
src/Onnxify.ProjectGenerator/: OnnxProjectGenerator.cs  Onnxify.ProjectGenerator.csproj  ProjectGenerationResult.cs  ProjectGeneratorOptions.cs  TextHelper.cs
src/Onnxify.Safetensors/: Class1.cs  DataType.cs  InvalidSliceErrorCode.cs  InvalidSliceException.cs  Metadata.cs  MetadataReadResult.cs  Onnxify.Safetensors.csproj  PreparedSafetensorsData.cs  ResolvedSlice.cs  SafeTensors.cs  SafetensorErrorCode.cs  SafetensorException.cs  SafetensorMath.cs  Safetensors.cs  SliceIterator.cs  SliceRange.cs  TensorBounds.cs  TensorDataOffsets.cs  TensorIndexer.cs  TensorInfo.cs  TensorView.cs  _SafeTensorErrorCode.cs  _SafeTensorException.cs
src/Onnxify.SourceGenerator/: Class1.cs  MarkdownHelper.cs  MediaPipeGenerator.cs  OnnxCompatibilityMetadataGenerator.cs  OnnxNodeGenerator.cs  Onnxify.SourceGenerator.csproj  ProtoSchemaGenerator.cs
src/Onnxify.Tests/: AgentSkillGeneratorTests.cs  HuggingFaceClientTests.cs  MathHelperTests.cs  OnnxHelperTensorSerializationTests.cs  OnnxModelGeneratorTests.cs  OnnxModelMetadataReaderTests.cs  OnnxModelTests.cs  OnnxNodeGeneratorTests.cs  OnnxProjectGeneratorTests.cs  Onnxify.Tests.csproj  (+12 more)
(+972 files in other folders)
